--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,8 @@
   },
   "main": "lib/src/index.js",
   "dependencies": {
+    "cors": "^2.8.5",
+    "express-http-proxy": "^1.6.2",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.2.0",
     "firebase-functions": "^3.13.2"
@@ -25,6 +27,7 @@
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.22.0",
     "firebase-functions-test": "^0.2.0",
+    "http-proxy-middleware": "^1.3.0",
     "typescript": "^3.8.0"
   },
   "private": true
