--- a/functions/package.json
+++ b/functions/package.json
@@ -14,6 +14,7 @@
   },
   "main": "lib/src/index.js",
   "dependencies": {
+    "axios": "^0.21.1",
     "cors": "^2.8.5",
     "express-http-proxy": "^1.6.2",
     "firebase": "^8.4.1",
