--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,8 @@
     "express-http-proxy": "^1.6.2",
     "firebase": "^8.4.1",
     "firebase-admin": "^9.2.0",
-    "firebase-functions": "^3.13.2"
+    "firebase-functions": "^3.13.2",
+    "nodemailer": "^6.6.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.9.1",
